# Heterogeneous-OpenMP

./: CMakeLists.txt  Makefile  README.md  cpu_parallel_min_element.hpp  cpu_parallel_openmp.hpp  gpu_parallel_cuda.cu  gpu_parallel_cuda.hpp  main.cpp  parallel_for_each.cpp  sample_class.cpp
